@@ -427,6 +427,8 @@ wagtail = (function(document, window, wagtail) {
 
         _closeDropDown: function(e) {
             this.state.isOpen = false;
+            e.stopPropagation();
+            e.preventDefault();
 
             var el = this.el;
             var $parent = this.$parent;
@@ -474,6 +476,3 @@ wagtail = (function(document, window, wagtail) {
     return wagtail;
 
 })(document, window, wagtail);
-
-
-
